src/objects/Elasticsearch_Collection__mdt.object
<CustomObject>
    <fields>
        <fullName>Can_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to track which object can be deactivated.</description>
        <inlineHelpText>This field is used to track which object can be deactivated.</inlineHelpText>
        <label>Can Deactivate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <description>Entity name to display in nightly integrity email.</description>
        <inlineHelpText>Entity name to display in nightly integrity email.</inlineHelpText>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Elasticsearch Collection</label>
    <pluralLabel>Elasticsearch Collections</pluralLabel>
</CustomObject>